--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "jgexml": "^0.2.0",
-    "pg": "^4.5.1"
+    "pg": "^4.5.1",
+	"bbcparse": "latest"
   }
 }
