--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app1.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mermade/bbc-rss.git"
+  },
   "keywords": [
     "http",
     "server",
@@ -15,9 +19,10 @@
   "author": "Mike Ralphson",
   "license": "ISC",
   "dependencies": {
+    "bbcparse": "latest",
+    "compression": "^1.6.2",
     "express": "^4.13.3",
     "jgexml": "^0.2.0",
-    "pg": "^4.5.6",
-	"bbcparse": "latest"
+    "pg": "^4.5.6"
   }
 }
