--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   "author": "Mike Ralphson",
   "license": "BSD-3-Clause",
   "dependencies": {
-    "bbcparse": "^1.1.11",
+    "bbcparse": "latest",
     "openc4": "latest",
     "jgexml": "latest",
     "compression": "^1.6.2",
     "ejs": "^2.5.1",
     "express": "^4.13.3",
     "jgexml": "^0.2.0",
-    "pg": "^4.5.6"
+    "pg": "^4.5.6",
+	"cheerio": "latest"
   }
 }
