--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^2.5.1",
     "express": "^4.13.3",
     "jgexml": "^0.2.0",
+    "moment-timezone": "^0.5.12",
     "openc4": "latest",
     "pg": "^4.5.6"
   }
