--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.15.5",
     "jgexml": "^0.2.0",
     "moment-timezone": "^0.5.12",
+    "node-fetch": "^2.1.2",
     "openc4": "latest",
     "pg": "^4.5.6"
   }
